# juce8-webview-linux-proj-setup

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_it  run  run_latest  run_latest_debug
plugin/: CMakeLists.txt
plugin/include/JuceWebViewPlugin/: MyWebBrowserComponent.h  PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
plugin/ui/public/: index.html
plugin/ui/public/js/: index.js
